updating to java 17, gradle 8.5, ktlint 12.0.3